--- a/car website/index.html
+++ b/car website/index.html
@@ -32,7 +32,7 @@
     <div class="container col-xxl-8 px-4 py-5">
         <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
             <div class="col-10 col-sm-8 col-lg-6">
-                <img src="./images/Screenshot_20240823-040722.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
+                <img src="./images/Screenshot_20240823-040722.png" loading="lazy" class="d-block mx-lg-auto img-fluid" alt="car image" width="700" height="500" loading="lazy">
             </div>
             <div class="col-lg-6">
                 <h1 class="display-5 fw-bold text-white lh-1 mb-3">Luxury Cars</h1>
